--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
 </head>
 <body dir="rtl">
     <!-- start if no messages -->
-    <!-- <div class="new-chat">
+    <div class="new-chat">
         <div class="no-message">
             <img src="./assets/imgs/ai.png" alt="">
-            <h1>أسأل الذكاء الاصطناعي</h1>
+            <div class="starting-topic">
+                <button>الوحدة الاولي</button>
+                <button>الوحدة الاولي</button>
+                <button>الوحدة الاولي</button>
+                <button>الوحدة الاولي</button>
+            </div>
+            <h1 style="display: none;">أسأل الذكاء الاصطناعي</h1>
         </div>
-    </div> -->
+    </div>
     <!-- end if no messages -->
     <!-- start chat input filled -->
     <div class="input-chat">
@@ -24,7 +30,7 @@
     </div>
     <!-- end chat input filled -->
     <!-- start chat messages -->
-    <div class="chat-messages">
+    <div class="chat-messages" style="display: none;">
         <!-- start message -->
         <div class="message">
             <div class="avatar">
