--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <!-- end chat input filled -->
     <!-- start chat messages -->
-    <div class="chat-messages" style="display: none;">
+    <div class="chat-messages" style="display:none">
         <!-- start message -->
         <div class="message">
             <div class="avatar">
