fix some isues in responsive

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body dir="rtl">
     <!-- start if no messages -->
-    <div class="new-chat">
+    <!-- <div class="new-chat">
         <div class="no-message">
             <img src="./assets/imgs/ai.png" alt="">
             <div class="starting-topic">
@@ -19,7 +19,7 @@
             </div>
             <h1 style="display: none;">أسأل الذكاء الاصطناعي</h1>
         </div>
-    </div>
+    </div> -->
     <!-- end if no messages -->
     <!-- start chat input filled -->
     <div class="input-chat">
@@ -30,7 +30,7 @@
     </div>
     <!-- end chat input filled -->
     <!-- start chat messages -->
-    <div class="chat-messages" style="display:none">
+    <div class="chat-messages" style="">
         <!-- start message -->
         <div class="message">
             <div class="avatar">
@@ -57,7 +57,10 @@
                 <img src="./assets/imgs/ai.png" alt="">
             </div>
             <div class="content">
-                <p>مرحباً</p>
+                <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق.
+                    إذا كنت تحتاج إلى عدد أكبر من الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد، النص لن يبدو مقسما ولا يحوي أخطاء لغوية، مولد النص العربى مفيد لمصممي المواقع على وجه الخصوص، حيث يحتاج العميل فى كثير من الأحيان أن يطلع على صورة حقيقية لتصميم الموقع.
+                    ومن هنا وجب على المصمم أن يضع نصوصا مؤقتة على التصميم ليظهر للعميل الشكل كاملاً،دور مولد النص العربى أن يوفر على المصمم عناء البحث عن نص بديل لا علاقة له بالموضوع الذى يتحدث عنه التصميم فيظهر بشكل لا يليق.
+                    هذا النص يمكن أن يتم تركيبه على أي تصميم دون مشكلة فلن يبدو وكأنه نص منسوخ، غير منظم، غير منسق، أو حتى غير مفهوم. لأنه مازال نصاً بديلاً ومؤقتاً.</p>
             </div>
             <div class="message-time">
                 <span>12:00</span>
